--- a/.github/workflows/echo-messages.yml
+++ b/.github/workflows/echo-messages.yml
@@ -15,7 +15,7 @@ jobs:
 
   echo-thanks:
     name: Thanks
-    runs-on: [windows-2019, ubuntu-18.04, macos-10.15]
+    runs-on: [windows-latest, ubuntu-latest, macos-latest]
     steps:
       - name: Thank you very much
         run: echo 'Thank you very much!'
