Fix: Remove branch filtering temprarily

--- a/.github/workflows/filter-branches-tags-paths.yaml
+++ b/.github/workflows/filter-branches-tags-paths.yaml
@@ -1,8 +1,5 @@
 name: filter-branches-tags-paths
-on:
-  pull_request:
-    branches:
-      - filtered_branch
+on: pull_request
 
 jobs:
   echo_hello:
