Fix: Modify a filtering condition by branch
A branch name is needed to write as a list item.

--- a/.github/workflows/filter-branches-tags-paths.yaml
+++ b/.github/workflows/filter-branches-tags-paths.yaml
@@ -2,7 +2,7 @@ name: filter-branches-tags-paths
 on:
   push:
     branches: 
-      filtered_branch
+      - filtered_branch
 
 jobs:
   echo_hello:
