Update: Remove '_' in filtering branch name.
`filtered_branch` → `filteredbranch`

--- a/.github/workflows/filter-branches-tags-paths.yaml
+++ b/.github/workflows/filter-branches-tags-paths.yaml
@@ -2,7 +2,7 @@ name: filter-branches-tags-paths
 on:
   push:
     branches: 
-      - filtered_branch
+      - filteredbranch
 
 jobs:
   echo_hello:
