--- a/.github/workflows/filter-branches-tags-paths.yaml
+++ b/.github/workflows/filter-branches-tags-paths.yaml
@@ -2,7 +2,7 @@ name: filter-branches-tags-paths
 on:
   push:
     branches: 
-      - filteredbranch
+      - filtered_branch
 
 jobs:
   echo_hello:
